# demo-polymarket-sgnal

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CLAUDE.md  README.md  docker-compose.yml  pyproject.toml
agents/: config.py  logging_utils.py  requirements.txt
agents/broadcaster/: node.py
agents/context_analyst/: ingest_context.py
agents/strategist/: agent.py  prompts.py  tools_rag.py
agents/watchdog/: watchdog.py
demo/: run_watchdog_loop.py
demo-polymarket/: docker-compose.yml  pyproject.toml
demo-polymarket/agents/: graph.py
demo-polymarket/demo/: run_watchdog_loop.py
demo-polymarket/tests/: test_broadcaster.py
docs/: CLEANUP.md  DEMO_RUNBOOK.md  agent-patterns.md  agent_flow.mermaid  architecture.md  components.md  mario_bridge_stack.mermaid  model-data-summary.md  models.md  naming-convention.md  observability.md  running-locally.md
examples/kubernetes/: 00-namespace.yaml
examples/standalone/: README.md
infrastructure/lv-1-security-and-config/: README.md
infrastructure/lv-4-inference-services/: .terraform.lock.hcl  README.md  main.tf  outputs.tf  providers.tf  variables.tf  versions.tf
infrastructure/lv-5-app-observability/: README.md
infrastructure/scripts/: README.md  destroy_all.sh  init_backend.sh  rebuild_all.sh
kubernetes/ex-inferentia-smoke-inf2/: README.md  kustomization.yaml  neuron-smoke.yaml
kubernetes/ex-model-storage/: 02-pv-efs.yaml  README.md
kubernetes/ex-vllm-neuron-llama31-8b-inf2/: Dockerfile.neuron  (+5 more)
model-deploy-manually/: README.md
specs/: PLAN.md
tests/: test_broadcaster.py  test_watchdog.py
(+332 files in other folders)
